--- a/style.css
+++ b/style.css
@@ -3,3 +3,53 @@
     padding: 0%;
     box-sizing: border-box;
 }
+
+/* Estilos generales */
+body ::selection{
+    color: #000;
+    background-color: #d61919d5;
+}
+
+
+/* Fin estilos generales */
+
+/* Estilos Header */
+.logo-navbar{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: solid 3px #fff;
+}
+
+.nav-item a{
+    color: #fff;
+    font-weight: 700;
+    transition: all .5s;
+    text-transform: uppercase;
+    font-size: 1.2rem ;
+}
+
+.nav-item a:hover{
+    color: #fff;
+    transform: translateY(-10px);
+}
+
+#header{
+    background-color: #000;
+    padding: 0rem 5rem;
+}
+
+.logo-navbar{
+    transition: all .5s;
+}
+.logo-navbar:hover{
+    transform: translateY(-10px);
+}
+
+.navbar-toggler-icon{
+    background-color: #fff;
+    border-radius: 5px;
+    width: 2rem !important;
+    height: 2rem !important;
+}
+/* Fin estilos header */
