--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body ::selection{
         color: #000;
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 991px) {
     .somos-video{
         margin-top: 3rem !important;
     }
@@ -106,9 +106,16 @@ body ::selection{
         justify-content: center;
     }
 
-    .card{
+    .card-container{
         width: 400px !important;
         padding: 0% !important;
+        transition: all .5s ease;
+        cursor: pointer;
+    }
+
+    .card-container:hover{
+        transform: scale(1.1);
+        box-shadow: 5px 5px 20px 10px rgba(0, 0, 0, 0.2);
     }
 
     .card-text{
@@ -118,4 +125,48 @@ body ::selection{
         color: #000;
     }
 
+    @media screen and (max-width: 977px) {
+        .card-container:hover{
+            transform: none;
+        }
+    }
 /* fin estilos servicios */
+
+/* estilos artistas */
+
+    #artistas{
+        border-top: solid 3px #000;
+    }
+
+    #artistas h2{
+        color: #000;
+        font-size: 2.5rem;
+    }
+
+    .card-artistas{
+        width: 300px !important;
+        padding: 0% !important;
+        transition: all .5s ease;
+        cursor: pointer;
+    }
+
+    .card-artistas:hover{
+        transform: scale(1.1);
+        box-shadow: 5px 5px 20px 10px rgba(0, 0, 0, 0.2);
+    }
+/* fin estilos artistas */
+
+/* estilos contacto */
+    #contacto{
+        border-top: solid 3px #000;
+    }
+
+    #contacto h2{
+        color: #000;
+        font-size: 2.5rem;
+    }
+
+    .btn{
+        text-transform: uppercase;
+    }
+/* fin contacto*/
